@@ -1,4 +1,4 @@
 DIST xf86bigfontproto-1.1.2.tar.bz2 37450 RMD160 48d7bbedfaf5061e76f8207570ca547ff53f44e0 SHA1 4a2e84b3f529e4747dbc07bf4496bfe01f40aa85 SHA256 01b475b5b27709a738db6f94ce2ded37f5db0792e8d9318069ecf1690a15f124
-EBUILD xf86bigfontproto-1.1.2.ebuild 562 RMD160 2356120d5a8c0b00a2d9f1f159ee5e11e0970039 SHA1 6ec6042f4870d9d8c62f97cd7cc6bfbc501ee750 SHA256 9d32e7df2378c04ede8a8df42ca117f760a8c8b67b57bc190bca1a9c2e0dd37c
-MISC ChangeLog 3379 RMD160 75e371c9933b2e989ca86a4e85912123fafa590a SHA1 b2875c69257101955108ccfc5fa5601f2f5c411d SHA256 e8095eb11aed813d0f1dc3d438199f61d88f10477f0ea4700ea5310d22d1e9a7
+EBUILD xf86bigfontproto-1.1.2.ebuild 561 RMD160 4f8b96307cac29630fe2dfb024320cbdee706ed8 SHA1 12a4fce329279ec92a22adca3250d6323fb82b02 SHA256 f948d2d475b8c4756447b03df37857db4f20f962f82d447bad3093372a085276
+MISC ChangeLog 3487 RMD160 47a0576eb9fde8023a7fcc640e175bbd21b8b9be SHA1 7aaa310569f3198fdfb5a1f1ab6c599c65cc7295 SHA256 02c0e33fe5b91eae5aa3a759759620db5ae48582151035a9946e4a6dff08f498
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
