@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/xf86bigfontproto
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/xf86bigfontproto/ChangeLog,v 1.27 2007/08/06 06:25:52 dberkholz Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/xf86bigfontproto/ChangeLog,v 1.28 2009/05/05 15:33:31 fauli Exp $
+
+  05 May 2009; Christian Faulhammer <fauli@gentoo.org>
+  xf86bigfontproto-1.1.2.ebuild:
+  fix repoman warnings
 
   06 Aug 2007; Donnie Berkholz <dberkholz@gentoo.org>; ChangeLog:
   Restore missing parts of changelog that were accidentally deleted.
